added more forulas and code, still needs work, some values not making sense

--- a/pricing.ipynb
+++ b/pricing.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,16 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7518401490d0>"
+       "<matplotlib.legend.Legend at 0x7238211557f0>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,16 +177,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7518044eab10>"
+       "<matplotlib.legend.Legend at 0x72382070c6b0>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,47 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1205.7232305064165"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "liq_point_example"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1500.5003438099104"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "indifference_point_example"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,16 +269,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7518055ac530>"
+       "<matplotlib.legend.Legend at 0x72382071acc0>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -361,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,16 +356,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x75180435ec30>"
+       "<matplotlib.legend.Legend at 0x72382079c6b0>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -443,14 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,16 +412,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x75180432e3f0>"
+       "<matplotlib.legend.Legend at 0x7238206553d0>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -527,6 +480,135 @@
    "source": [
     "![image.png](attachment:image.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pricing methodology\n",
+    "\n",
+    "I am using a fairly standard methodology using an arbitrage argument.\n",
+    "\n",
+    "If we do not lend to the borrower. We will have $(X + O) \\$$ at time 0, X Being the loan size and O being the price of the options to hedge. You will this have $(X + O)e^{rt}$ $ at time t  \n",
+    "\n",
+    "If you do give the loan; then at time t you will receive the loaned amount X plus you will have the payment P, plus the interest on P as you receive it upfront. Thus you will have $X + Pe^{rt}\\$$\n",
+    "\n",
+    "$$\n",
+    "(X + O)e^{rt} = X + Pe^{rt} \\rightarrow X + O = Xe^{-rt} + P \\rightarrow O + X(1 - e^{-rt}) = P\n",
+    "$$\n",
+    "\n",
+    "Or as a rate $R = \\frac{O}{X} + (1 - e^{-rt})$  \n",
+    "\n",
+    "We will also be using a similar metric to this for later generalizations when we will need to use Monte Carlo simulations to price these. It will be:\n",
+    "$$\n",
+    "Xe^{rt} =  \\mathbb{E}[L] + Pe^{rt} \\rightarrow P = X - \\mathbb{E}[L]e^{-rt}\n",
+    "$$\n",
+    "\n",
+    "Where $\\mathbb{E}[L]$ is the expected value that we will be repayed as the lender at time t. Again as a rate this can be written as $ R = 1 - \\frac{\\mathbb{E}[L]}{X}e^{-rt}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from optionPricing import  OptionPricer\n",
+    "\n",
+    "pricer = OptionPricer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we just need to set the time for the loan to maturity. I will also be setting a value for the volatility sigma and an eth price.  \n",
+    "I assume a flat smile here but in reality people usually use a smile so sigma would be a function of the strike."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vol = 0.6\n",
+    "eth_price = 2500\n",
+    "loan_time = 0.1\n",
+    "risk_free_rate = 0.05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "down_and_out_put = pricer.down_and_out_put(eth_price, indifference_point_example, liq_point_example, loan_time, risk_free_rate, vol)\n",
+    "american_digital_put = pricer.american_digital_put(eth_price, liq_point_example, loan_time, risk_free_rate, vol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sense check\n",
+    "if down_and_out_put > pricer.vanilla_put(eth_price, indifference_point_example, loan_time, risk_free_rate, vol):\n",
+    "    raise ValueError(\"Down and out put is worth more than vanilla put\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loan cost: 871.326588499958\n",
+      "Loan cost as percentage: 0.5808843923333054%\n"
+     ]
+    }
+   ],
+   "source": [
+    "option_cost = american_digital_put * loan_amount + down_and_out_put * eth_supplied\n",
+    "\n",
+    "loan_cost = option_cost + loan_amount * (1 - exp(-rate_usdc * loan_time))\n",
+    "loan_cost_as_rate = loan_cost / loan_amount\n",
+    "\n",
+    "print(f\"Loan cost: {loan_cost}\")\n",
+    "print(f\"Loan cost as percentage: {loan_cost_as_rate * 100}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "751.8781289101439"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loan_amount * ( -1 + exp(risk_free_rate * loan_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
