actually I think it's right, it is very sensetive to vol however

--- a/pricing.ipynb
+++ b/pricing.ipynb
@@ -528,11 +528,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vol = 0.6\n",
+    "vol = 0.7\n",
     "eth_price = 2500\n",
     "loan_time = 0.1\n",
     "risk_free_rate = 0.05"
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,15 +561,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loan cost: 871.326588499958\n",
-      "Loan cost as percentage: 0.5808843923333054%\n"
+      "Option cost: 539.6379538723615$\n",
+      "Loan cost: 1287.7660749700135$\n",
+      "Loan cost as percentage: 0.8585107166466757%\n"
      ]
     }
    ],
@@ -579,36 +580,10 @@
     "loan_cost = option_cost + loan_amount * (1 - exp(-rate_usdc * loan_time))\n",
     "loan_cost_as_rate = loan_cost / loan_amount\n",
     "\n",
-    "print(f\"Loan cost: {loan_cost}\")\n",
+    "print(f'Option cost: {option_cost}$')\n",
+    "print(f\"Loan cost: {loan_cost}$\")\n",
     "print(f\"Loan cost as percentage: {loan_cost_as_rate * 100}%\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "751.8781289101439"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "loan_amount * ( -1 + exp(risk_free_rate * loan_time))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
