tidying and changing some docs

--- a/pricing.ipynb
+++ b/pricing.ipynb
@@ -133,7 +133,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7a6a18132660>"
+       "<matplotlib.legend.Legend at 0x7ebb040821e0>"
       ]
      },
      "execution_count": 4,
@@ -192,7 +192,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7a6a0e1f46b0>"
+       "<matplotlib.legend.Legend at 0x7ebb040dc0b0>"
       ]
      },
      "execution_count": 6,
@@ -284,7 +284,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7a6a0e0cff20>"
+       "<matplotlib.legend.Legend at 0x7ebb040fee10>"
       ]
      },
      "execution_count": 11,
@@ -371,7 +371,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7a6a0df8c5c0>"
+       "<matplotlib.legend.Legend at 0x7ebafa977bf0>"
       ]
      },
      "execution_count": 15,
@@ -427,7 +427,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7a6a0db298b0>"
+       "<matplotlib.legend.Legend at 0x7ebafa926e10>"
       ]
      },
      "execution_count": 17,
@@ -658,7 +658,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7a69c238a840>"
+       "<matplotlib.legend.Legend at 0x7ebab1d8c740>"
       ]
      },
      "execution_count": 24,
@@ -720,7 +720,9 @@
    "source": [
     "Modelling asset prices with a random walk takes the form:\n",
     "\n",
-    "$$S_{t+1} = S_t + \\mu \\Delta t S_t + \\sigma \\sqrt{\\Delta t} S_t Y_i$$\n",
+    "$$S_{t+1} = S_t \\cdot \\exp\\left[\\left(\\mu - \\frac{1}{2}\\sigma^2\\right)\\Delta t + \\sigma \\sqrt{\\Delta t} \\cdot Y_i\\right]$$\n",
+    "\n",
+    "\n",
     "\n",
     "where:\n",
     "\n",
@@ -766,7 +768,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100000/100000 [00:42<00:00, 2363.67it/s]\n"
+      "100%|██████████| 100000/100000 [01:18<00:00, 1278.17it/s]\n"
      ]
     }
    ],
@@ -776,7 +778,7 @@
     "    [eth_price],\n",
     "    [0],\n",
     "    [vol],\n",
-    "    200,\n",
+    "    1000,\n",
     "    loan_time,\n",
     "    risk_free_rate,\n",
     "    100_000\n",
@@ -792,95 +794,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(1295.3244434093358)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "loan_amount - mu * exp(-risk_free_rate * loan_time)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(6716.326424890442)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sigma ** (1/2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(0.008635496289395528)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "## And as a rate\n",
-    "\n",
-    "1 - (mu / loan_amount) * exp(-risk_free_rate * loan_time)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "np.float64(8.978914944667139)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loan cost : 1257.2201063947577\n",
+      "Rate : 0.008381467375965013%\n",
+      "APR : 8.704758014087677%\n",
+      "Standard Deviation : 6277.693384890332\n"
+     ]
     }
    ],
    "source": [
-    "rate_to_apr(1 - (mu / loan_amount) * exp(-risk_free_rate * loan_time), loan_time) * 100"
+    "print(f\"loan cost : {loan_amount - mu * exp(-risk_free_rate * loan_time)}\")\n",
+    "print(f\"Rate : {(1 - (mu / loan_amount) * exp(-risk_free_rate * loan_time))}%\")\n",
+    "print(f\"APR : {rate_to_apr(1 - (mu / loan_amount) * exp(-risk_free_rate * loan_time), loan_time) * 100}%\")\n",
+    "print(f\"Standard Deviation : {sigma}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(9.029291297683596)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "plt.figure(figsize=(12, 6))\n",
-    "for _, movement in enumerate(walk[0]):\n",
-    "    plt.plot(movement, label=f'Movement {movement}')\n"
+    "rate_to_apr(1 - (mu / loan_amount) * exp(-risk_free_rate * loan_time), loan_time) * 100"
    ]
   },
   {
@@ -899,13 +851,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
